# mantlecoin

./: .appveyor.yml  .cirrus.yml  .fuzzbuzz.yml  .gitignore  .travis.yml  CODEOWNERS  CONTRIBUTING.md  COPYING  INSTALL.md  LICENSE  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac  libmantleconsensus.pc.in  rebrand.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  mantle.sln  mantle_config.h  msvc-autogen.py  vcpkg.json
ci/: test_run_all.sh
contrib/: README.md  filter-lcov.py  gitian-build.py  install_db4.sh  mantle-cli.bash-completion  mantle-qt.pro  mantle-tx.bash-completion  mantled.bash-completion  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  mantle-conf.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  mantle-cli.1  mantle-qt.1  mantle-tx.1  mantle-wallet.1  mantled.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.crc32c.include  (+154 more)
(+1143 files in other folders)
