dist_man1_MANS=

if BUILD_MANTLED
  dist_man1_MANS+=mantled.1
endif

if ENABLE_QT
  dist_man1_MANS+=mantle-qt.1
endif

if BUILD_MANTLE_CLI
  dist_man1_MANS+=mantle-cli.1
endif

if BUILD_MANTLE_TX
  dist_man1_MANS+=mantle-tx.1
endif

if ENABLE_WALLET
if BUILD_MANTLE_WALLET
  dist_man1_MANS+=mantle-wallet.1
endif
endif
